# cod

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  test.py
cod/: __init__.py  _pkg.py  ar.py  pkgdb.py
doc/: internals.md
doc/internals/: a.c  add-filelist.py  add-pkg.py  c.c  d.c  e.c
examples/fc-bin/: cod.ini
examples/fc-bin/src/: main.c
examples/fc-headers/: cod.ini
examples/fc-headers/include/: fc.h
examples/fc-lib1/: cod.ini
examples/fc-lib1/src/: fc.c
examples/fc-lib2/: cod.ini
examples/hc-bin/: cod.ini
examples/hc-bin/src/: main.c
examples/hc-lib1/: cod.ini
examples/hc-lib2/: cod.ini
examples/hd-bin/: cod.ini
examples/hd-bin/src/: main.c
examples/hd-lib1/: cod.ini
examples/hd-lib2/: cod.ini
examples/hd-lib2/include/: hd2.h
examples/hello-bin/: cod.ini
examples/hello-lib/: cod.ini
examples/hello-lib/src/: hello.c
examples/ob-bin/: cod.ini
examples/ob-bin/src/: main.c
examples/ob-lib1/: cod.ini
examples/ob-lib2/: cod.ini
src/cod/: __init__.py  __main__.py  ar.py  compat.py  dep.py  elf.py  local_repo.py  lock.py  manifest.py  ninja.py  objconv.py  objcopy.py  package.py  project.py  repo.py  thin.py  util.py  workspace.py
src/cod/package/: __init__.py  manifest.py
src/cod/project/: __init__.py  manifest.py
tests/: __init__.py
tests/build-flags/lib/: cod.toml
tests/export-flags/lib1/: cod.toml
tests/i686-target/lib/: cod.toml
tests/include-asm/lib/: cod.toml
tests/include-asm/lib1/: cod.toml
tests/include-transitive/lib1/: cod.toml
tests/include-transitive/lib2/: cod.toml
tests/include-transitive/lib2/include/: it2.h
tests/lib-profile/lib/: cod.toml
tests/lib-profile/lib/include/: lp.h
tests/lib-profile/lib/src/: lp.c
tests/linker-script/lib/: cod.toml
tests/objconv/lib/: cod.toml  linker.ld
tests/objconv/lib/src/: oc.c
tests/objcopy/: cod.toml
tests/obsolete/lib2/: cod.toml
tests/project-flags/: cod.toml
tests/project-flags/lib/src/: pf.c
tests/single-arch/lib1/: cod.toml
tests/single-arch/lib2/: cod.toml
tests/symbol-alternative/lib1/: cod.toml
tests/symbol-alternative/lib2/: cod.toml
tests/symbol-asm/lib/: cod.toml
tests/symbol-asm/lib2/: cod.toml
tests/symbol-dependency/lib/: cod.toml
tests/symbol-transitive/include/: cod.toml
(+7 files in other folders)
