[project]
name = "cod"
version = "0.0.1"
license = {text = "AGPL-3.0-only"}
authors = [{name="taohaoqiang"}]
description = "C source code package manager"
requires-python = ">=3.7"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: C",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
dependencies = [
  "ninja",
  "pydantic",
  "ziglang",
  'backports.cached-property; python_version<"3.8"',
  'importlib-metadata >= 3.6; python_version<"3.10"',
  'tomli>=1.1.0; python_version<"3.11"',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/tanhaoqiang/cod"

[project.entry-points."cod.repos"]
local = "cod.local_repo:LocalRepo"

[project.scripts]
cod = "cod:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ld"]
